# ASD

./: .gitignore  Cosas.txt  README.md
PL1/sesion_2_1/: p2_1_ej1_servidor_eco.py  p2_1_ej2_servidor_eco.py  p2_1_ej3_servidor_eco.py  p2_1_ej4_servidor_prefork.py  p2_1_ej5_servidor_fork.py
PL1/sesion_2_2/: p2_2_ej1_servidor_hilos.py  p2_2_ej2_servidor_pool_hilos.py
PL2/: p2_3_ej1_servidor_select.py  p2_3_ej2_servidor_selectors.py  p2_3_ej5_echo_asyncio.py
PL2/sesion_2_3/: p2_3_ej1_servidor_select.py  p2_3_ej3opc_servidor_selectors_dos_sockets.py  p2_3_ej4opc_selectors_eco_multiple.py
PL2/sesion_2_4/: p2_4_ej1_juego_hilos.py  p2_4_ej2_juego_asyncio.py  p2_4_ej3_juego_selectors.py
PL3/sesion2_5/: p2_5_ej1_chat_async.py  p2_5_ej2_broker.py  p2_5_ej3opc_broker_async.py  p2_5_ej4_chat_con_broker.py  p2_5_ej5opc_chat_redis.py  p2_5_ej6opc_chat_redis_pubsub.py
PL4/Sesion3_1/: bajar_farmacias.py  farmacias.json  farmacias_gps.json  farmacias_scrapy.json  interprete-xpath.py  main.py  noticias.json  p3_1_ej1_xpath.py  p3_1_ej2_farmacia_pydantic.py  p3_1_ej3_lector_json.py  p3_1_ej4_opcional_scrapy_gps.py  p3_1_ej4_scrapy.py  p3_1_ej5_libre.py  pagina-farmacias.html  prueba.py  pyproject.toml
PL5/Sesion3_2/: p3_2_ej2_api_fase1.py  p3_2_ej3opc_api_fase2_sqlalchemy.py  probar_repo_tareas.py  pyproject.toml  tareas.db
PL5/Sesion3_2_y_Sesion3_3/: main.py  p3_2_ej1_api_fase1.py  p3_2_ej2_api_fase1.py  p3_2_ej3opc_api_fase2_sqlalchemy.py  p3_2_ej4_api_fase2.py  p3_3opc_ej1_seguridad.py  p3_3opc_ej2_websockets.py  pyproject.toml
PL6/Sesion4_1/: dockerfile  (+3 more)
pc/: pepe.txt
(+3 files in other folders)
